--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class = "navbar">
+		<ul>
+			<a href = "#">Home</a>
+			<a href = "#">About us</a>
+			<a href = "#">Contact us</a>
+		</ul>
+
+		<h1>Img 1</h1>
+		<img src = "https://picsum.photos/id/123/200/300" alt = "Random image">
+		<h1>Img 2</h1>
+		<img src = "https://picsum.photos/id/124/200/300" alt = "Random image">
+		<h1>Img 3</h1>
+		<img src = "https://picsum.photos/id/125/200/300" alt = "Random image>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
