--- a/main.html
+++ b/main.html
@@ -4,6 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
+
+		.navbar a{
+			text-decoration: none;
+			color: red;
+		}
+	</style>
 </head>
 
 <body>
