--- a/main.html
+++ b/main.html
@@ -30,13 +30,13 @@
 			<a href = "#">About us</a>
 			<a href = "#">Contact us</a>
 		</ul>
+	</div>
 
-		<h1>Img 1</h1>
+		<h1>3 Random images</h1>
+		<div clas = "gallary-image">
 		<img src = "https://picsum.photos/id/123/200/300" alt = "Random image">
-		<h1>Img 2</h1>
 		<img src = "https://picsum.photos/id/124/200/300" alt = "Random image">
-		<h1>Img 3</h1>
-		<img src = "https://picsum.photos/id/125/200/300" alt = "Random image>
+		<img src = "https://picsum.photos/id/125/200/300" alt = "Random image">
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
