--- a/main.html
+++ b/main.html
@@ -6,18 +6,41 @@
 	<link rel="stylesheet" href="styles.css">
 	<style>
 		body {
-			margin: 0;
-			padding: 0;
-		}
-
-		.navbar a{
-			text-decoration: none;
-			color: red;
-		}
-
-		.navbar a:hover {
-			color: black;
-		}
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background-color: #333;
+            padding: 1em;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 10px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        h1 {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .image-gallery {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            padding: 20px;
+        }
+        .image-gallery img {
+            border: 2px solid #ddd;
+            border-radius: 4px;
+        }
 	</style>
 </head>
 
