--- a/main.html
+++ b/main.html
@@ -32,8 +32,8 @@
             margin-top: 20px;
         }
         .gallary-image {
-            display: flex;
-            justify-content: center;
+            /* display: flex;
+            justify-content: center; */
             gap: 10px;
             padding: 10px;
         }
