--- a/main.html
+++ b/main.html
@@ -32,15 +32,20 @@
             margin-top: 20px;
         }
         .gallary-image {
-            /* display: flex;
-            justify-content: center; */
+            display: flex;
+            justify-content: center;
             gap: 10px;
             padding: 10px;
         }
         .gallary-image img {
             border: 5px solid #333;
             border-radius: 10px;
+			margin-right: 10px;
         }
+
+		.container {
+			padding: 20px;
+		}
 	</style>
 </head>
 
@@ -55,11 +60,13 @@
 		</ul>
 	</nav>
 
+	<div class="container">
 		<h1>3 Random images</h1>
 		<div class = "gallary-image">
 		<img src = "https://picsum.photos/id/123/200/300" alt = "Random image">
 		<img src = "https://picsum.photos/id/124/200/300" alt = "Random image">
 		<img src = "https://picsum.photos/id/125/200/300" alt = "Random image">
+	</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
