--- a/main.html
+++ b/main.html
@@ -5,47 +5,42 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-		body {
+		 body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
         nav {
             background-color: black;
-            padding: 1em;
+            padding: 10px;
         }
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
+            display: flex;
+			justify-content: space-evenly;
         }
         nav ul li {
-            display: inline;
-            margin-right: 40px;
+            margin-right: 20px;
         }
         nav ul li a {
             color: white;
             text-decoration: none;
         }
-        h1 {
-            text-align: center;
-            margin-top: 20px;
-        }
-        .gallary-image {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            padding: 10px;
-        }
-        .gallary-image img {
-            border: 5px solid #333;
-            border-radius: 10px;
-			margin-right: 10px;
-        }
 
-		.container {
-			padding: 20px;
+		a:hover{
+			color: red;
 		}
+        .container {
+            padding: 20px;
+        }
+        .images img {
+            margin-right: 10px;
+        }
+        .images {
+            display: flex;
+        }
 	</style>
 </head>
 
@@ -62,7 +57,7 @@
 
 	<div class="container">
 		<h1>3 Random images</h1>
-		<div class = "gallary-image">
+		<div class = "images">
 		<img src = "https://picsum.photos/id/123/200/300" alt = "Random image">
 		<img src = "https://picsum.photos/id/124/200/300" alt = "Random image">
 		<img src = "https://picsum.photos/id/125/200/300" alt = "Random image">
