--- a/main.html
+++ b/main.html
@@ -47,22 +47,23 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<nav style = "text-align: center;">
-		<ul>
-			<li><a href = "#">Home</a></li>
-			<li><a href = "#">About us</a></li>
-			<li><a href = "#">Contact us</a></li>
-		</ul>
-	</nav>
-
-	<div class="container">
-		<h1>3 Random images</h1>
-		<div class = "images">
-		<img src = "https://picsum.photos/id/123/200/300" alt = "Random image">
-		<img src = "https://picsum.photos/id/124/200/300" alt = "Random image">
-		<img src = "https://picsum.photos/id/125/200/300" alt = "Random image">
-	</div>
-	</div>
+	<nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about-us">About us</a></li>
+            <li><a href="#contact-us">Contact us</a></li>
+        </ul>
+    </nav>
+    
+    <!-- Content Container -->
+    <div class="container">
+        <h2>3 random images</h2>
+        <div class="images">
+            <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+            <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+            <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
